# evoloop

./: .gitignore  LICENSE  README.md  TESTING.md  VERIFICACAO_PT.md  VERIFICATION_REPORT.md  demo_stage1.py  pyproject.toml  verify_project.py
docs/: architecture.md  architecture_stage1.md  roadmap.md  user_experience_stage1.md
docs-site/: README.md  concepts.md  guide.md
examples/: langgraph_agent.py  simple_qa_agent.py
src/evoloop/: __init__.py  cli.py  storage.py  tracker.py  types.py  utils.py
src/evoloop/annotations/: __init__.py  storage.py  types.py
src/evoloop/export/: __init__.py  csv_export.py  json_export.py
src/evoloop/ui/: __init__.py  app.py
tests/: __init__.py  test_end_to_end.py  test_integration_mocks.py  test_storage.py  test_tracker.py  test_types.py
